--- a/diamm/templates/website/country/country_detail.jinja2
+++ b/diamm/templates/website/country/country_detail.jinja2
@@ -4,7 +4,11 @@
     <div class="columns">
         <div class="column">
             <h2 class="title">{{ content.name }}</h2>
-            <h3>Cities</h3>
+        </div>
+    </div>
+    <div class="columns">
+        <div class="column is-one-third">
+            <h3 class="title is-4">Cities</h3>
             <ul>
                 {% for city in content.cities %}
                     <li><a href="{{ city.url }}">{{ city.name }}</a></li>
