--- a/diamm/templates/website/city/city_detail.jinja2
+++ b/diamm/templates/website/city/city_detail.jinja2
@@ -4,7 +4,7 @@
     <div class="columns">
         <div class="column">
             <h2 class="title">{{ content.name }}, <a href="{{ content.country.url }}">{{ content.country.name }}</a></h2>
-            <h3 class="title">Archives</h3>
+            <h3 class="title is-4">Archives</h3>
             <ul>
                 {% for archive in content.archives %}
                     <li>
