--- a/diamm/static/stylesheets/_source.scss
+++ b/diamm/static/stylesheets/_source.scss
@@ -399,6 +399,9 @@ tr.selected {
   @include button();
   width: 60%;
   margin: auto;
+}
 
+.image-composition-details {
+  margin-bottom: 10px;
 }
 
