--- a/diamm/templates/website/blocks/form_field.jinja2
+++ b/diamm/templates/website/blocks/form_field.jinja2
@@ -1,11 +1,19 @@
 {%- macro format(field, ftype) -%}
-    <label class="label" for="{{ field.id_for_label }}">{{ field.label }}</label>
-    <p class="control">
-        <input class="input" type="{{ ftype }}" id="{{ field.id_for_label }}" value="{{  field.value() if field.value() else "" }}" name="{{ field.html_name }}" />
-        {% if field.errors %}
-            {% for err in field.errors %}
-                <span class="help is-danger">{{ err }}</span>
-            {% endfor %}
-        {% endif %}
-    </p>
+    <div class="field is-horizontal">
+        <div class="field-label is-normal">
+            <label class="label" for="{{ field.id_for_label }}">{{ field.label }}</label>
+        </div>
+        <div class="field-body">
+            <div class="field">
+                <div class="control">
+                    <input class="input" type="{{ ftype }}" id="{{ field.id_for_label }}" value="{{  field.value() if field.value() else "" }}" name="{{ field.html_name }}" />
+                    {% if field.errors %}
+                        {% for err in field.errors %}
+                            <span class="help is-danger">{{ err }}</span>
+                        {% endfor %}
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
 {%- endmacro -%}
