--- a/diamm/templates/website/blocks/pricing_field.jinja2
+++ b/diamm/templates/website/blocks/pricing_field.jinja2
@@ -1,1 +1,4 @@
-{{ value.description }} £{{ value.price }}<br/>
+<div style="margin-bottom: 0.8rem;">
+    <a class="button is-primary is-small" href="{{ value.purchase_link }}">Purchase</a> {{ value.description }} £{{ value.price }}
+</div>
+
