--- a/diamm/templates/website/auth/reset.jinja2
+++ b/diamm/templates/website/auth/reset.jinja2
@@ -4,16 +4,21 @@
 {% block body %}
     <div class="columns">
         <div class="column is-half is-offset-one-quarter">
-            <div class="login-block">
+            <div>
                 <h2 class="title">Reset password</h2>
-                <p>Forgotten your password? Enter your email address below, and we'll send instructions for setting a new one.</p>
+                <p>
+                    Forgotten your password? Enter your email address below, and we'll send instructions for setting a new one.
+                </p>
                 <form method="post" class="reset">
                     {% csrf_token %}
                     {{ form_field.format(form.email, "text") }}
-                    <input class="input" type="hidden" name="next" value="/reset/sent/" />
-                    <button type="submit" class="button is-primary">Reset</button>
+                    <div class="field">
+                        <input class="input" type="hidden" name="next" value="/reset/sent/" />
+                    </div>
+                    <div class="field is-pulled-right">
+                        <button type="submit" class="button is-primary">Reset</button>
+                    </div>
                 </form>
-                <p>NB: Accounts on the beta website are independent from diamm.ac.uk, and resetting your password on this site will not affect your account details on the old site.</p>
             </div>
         </div>
     </div>
