--- a/diamm/templates/website/blocks/latest_news.jinja2
+++ b/diamm/templates/website/blocks/latest_news.jinja2
@@ -1,6 +1,8 @@
 {% for article in news %}
-    <h3 class="title is-5">
-        <a href="{{ article.slug }}">{{ article.title }}</a>
-    </h3>
-    {{ article.summary | richtext }}
+    <article class="news-story">
+        <h4 class="title is-5">
+            <a href="{{ pageurl(article) }}">{{ article.title }}</a>
+        </h4>
+        {{ article.summary | richtext }}
+    </article>
 {% endfor %}
