--- a/diamm/templates/website/cms/content_page.jinja2
+++ b/diamm/templates/website/cms/content_page.jinja2
@@ -1,8 +1,20 @@
 {% extends "website/cms/cmsbase.jinja2" %}
 
+{% block title %}
+    <title>{{ page.title }}</title>
+{% endblock %}
+
 {% block cmsbody %}
-        <div class="content">
-        <h2>{{ page.title }}</h2>
-            {{ page.body | richtext }}
+    <div class="columns">
+        <div class="column">
+            <h2 class="title is-2">{{ page.title }}</h2>
         </div>
+    </div>
+    <div class="columns">
+        <div class="column">
+            <div class="content">
+                {{ page.body | richtext }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
