--- a/diamm/templates/website/cms/publication_page.jinja2
+++ b/diamm/templates/website/cms/publication_page.jinja2
@@ -1,9 +1,29 @@
 {% extends "website/cms/cmsbase.jinja2" %}
 
+{% block title %}
+    <title>{{ page.title }}</title>
+{% endblock %}
+
 {% block cmsbody %}
-    <div class="content">
-        <h2>{{ page.title }}</h2>
-        {{ page.body | richtext }}
+    <div class="columns">
+        <div class="column">
+            <h2 class="title is-2">{{ page.title }}</h2>
+        </div>
     </div>
+    <div class="columns">
+        <div class="column is-two-thirds">
+            <div class="content">
+                {{ page.body | richtext }}
+            </div>
+        </div>
+        <div class="column purchasing">
+            <h4 class="title is-4">Prices</h4>
+            {% for block in page.pricing %}
+                <div>{% include_block block %}</div>
+            {% endfor %}
+            <hr />
+        </div>
+    </div>
+
 {% endblock %}
 
