--- a/diamm/templates/website/person/person_detail.jinja2
+++ b/diamm/templates/website/person/person_detail.jinja2
@@ -1,9 +1,18 @@
 {% extends "base.jinja2" %}
 
+{% block title %}
+    <title>Digital Image Archive of Medieval Music :: {{ content.full_name }}</title>
+{% endblock %}
+
 {% block body %}
     <div class="columns">
         <div class="column">
-            <h1 class="title is-2">{{ content.full_name }}</h1>
+            <h2 class="title is-2">{{ content.full_name }}</h2>
+            {% if content.variant_names %}
+            <h3 class="subtitle">
+                {{ content.variant_names|join(", ") }}
+            </h3>
+            {% endif %}
         </div>
     </div>
     {% if content.biography %}
@@ -78,7 +87,7 @@
                 </table>
             {% endif %}
             {% if content.related_sources %}
-                <h4 class="title is-4">Other Relationships to Sources</h4>
+                <h4 class="title is-4">Relationships to Sources</h4>
                 <table class="table">
                     <thead>
                         <tr>
