--- a/diamm/static/stylesheets/_navbar.scss
+++ b/diamm/static/stylesheets/_navbar.scss
@@ -43,6 +43,9 @@
     &:hover {
       background-color: $diamm-grey;
     }
+    &:active {
+      background-color: inherit;
+    }
     img {
       position: absolute;
       top: 6px;
@@ -69,13 +72,20 @@
     column-rule: 1px dashed $diamm-light-grey;
   }
 
+  .dropdown-menu.left-menu {
+    border-radius: 5px 0 5px 5px;
+  }
+
+  .dropdown-menu.right-menu {
+    border-radius: 0 5px 5px;
+  }
+
   .dropdown-menu {
     display: none;
     position: absolute;
     top: $navbar-height - 1;
     background-color: $diamm-white;
     box-shadow: 0 1px 10px rgba(10, 10, 10, 0.6), 0 0 0 0px rgba(10, 10, 10, 0.5);
-    border-radius: 0 5px 5px;
     padding: 15px;
     text-align: left;
 
