--- a/diamm/static/stylesheets/bulma/components/pagination.sass
+++ b/diamm/static/stylesheets/bulma/components/pagination.sass
@@ -23,6 +23,16 @@ $pagination-ellipsis: $grey-light !default
 
 $pagination-shadow-inset: inset 0 1px 2px rgba($black, 0.2)
 
+.pagination
+  font-size: $size-normal
+  // Sizes
+  &.is-small
+    font-size: $size-small
+  &.is-medium
+    font-size: $size-medium
+  &.is-large
+    font-size: $size-large
+
 .pagination,
 .pagination-list
   align-items: center
@@ -36,7 +46,7 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($black, 0.2)
 .pagination-ellipsis
   +control
   +unselectable
-  font-size: 0.875rem
+  font-size: 1em
   padding-left: 0.5em
   padding-right: 0.5em
   justify-content: center
@@ -46,7 +56,7 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($black, 0.2)
 .pagination-next,
 .pagination-link
   border: 1px solid $pagination-border
-  min-width: 2.5em
+  min-width: 2.25em
   &:hover
     border-color: $pagination-hover-border
     color: $pagination-hover
