--- a/diamm/static/stylesheets/bulma/elements/other.sass
+++ b/diamm/static/stylesheets/bulma/elements/other.sass
@@ -5,13 +5,16 @@
   position: relative
   +desktop
     margin: 0 auto
-    max-width: $desktop - 40px // 960px
+    width: $desktop - 40px
     // Modifiers
     &.is-fluid
       margin: 0 20px
       max-width: none
+      width: auto
   +widescreen
-    max-width: $widescreen - 40px // 1152px
+    width: $widescreen - 40px
+  +fullhd
+    width: $fullhd - 40px
 
 .delete
   +delete
