--- a/diamm/static/stylesheets/bulma/utilities/controls.sass
+++ b/diamm/static/stylesheets/bulma/utilities/controls.sass
@@ -10,11 +10,13 @@ $control-radius-small: $radius-small !default
   box-shadow: none
   display: inline-flex
   font-size: $size-normal
-  height: 2.285em
+  height: 2.25em
   justify-content: flex-start
-  line-height: 1.5
-  padding-left: 0.75em
-  padding-right: 0.75em
+  line-height: 1.25
+  padding-bottom: 0.5em
+  padding-left: 0.625em
+  padding-right: 0.625em
+  padding-top: 0.5em
   position: relative
   vertical-align: top
   // States
