--- a/diamm/static/stylesheets/styles.scss
+++ b/diamm/static/stylesheets/styles.scss
@@ -2,10 +2,12 @@
 @import "fonts";
 @import "colors";
 @import "mixins";
-//@import "skeleton/skeleton";
 @import "font-awesome/font-awesome";
-@import "variables";
 @import "bulma";
+//@import "skeleton/skeleton";
+
+@import "variables";
+@import "list";
 @import "navbar";
 @import "footer";
 @import "edit";
@@ -16,12 +18,12 @@
 @import "bibliography";
 @import "login";
 @import "beta";
+@import "cms";
 @import "../vendor/ideal-image-slider/ideal-image-slider.css";
 
 
 html {
   height: 100%;
-  //font-size: 1em;
   background-color: $diamm-white;
 }
 
@@ -30,7 +32,6 @@ html {
 body {
   font-family: $sans-serif;
   color: $diamm-black;
-
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -40,6 +41,10 @@ body {
 .page-body {
   margin-top: 1rem !important;
   flex: 1;
+}
+
+p {
+  margin: 0.8rem 0;
 }
 
 .tabs li.is-active a {
@@ -62,16 +67,24 @@ a {
 .loading-spinner {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   height: 100vh;
+  color: $diamm-red;
 
   .spinner-message {
     justify-content: center;
     text-align: center;
-    width: 20%;
-    height: 20%;
+    //width: 20%;
+    //height: 20%;
     color: $diamm-red;
   }
+}
+
+.loading-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20vh;
 }
 
 .no-image {
