--- a/diamm/templates/website/person/person_detail.jinja2
+++ b/diamm/templates/website/person/person_detail.jinja2
@@ -9,7 +9,7 @@
         <div class="column">
             <h2 class="title is-2">{{ content.full_name }}</h2>
             {% if content.variant_names %}
-            <h3 class="subtitle">
+            <h3 class="subtitle is-3">
                 {{ content.variant_names|join(", ") }}
             </h3>
             {% endif %}
