--- a/diamm/templates/website/city/city_detail.jinja2
+++ b/diamm/templates/website/city/city_detail.jinja2
@@ -4,6 +4,8 @@
     <div class="columns">
         <div class="column">
             <h2 class="title">{{ content.name }}, <a href="{{ content.country.url }}">{{ content.country.name }}</a></h2>
+
+            {% if content.archives %}
             <h3 class="title is-4">Archives</h3>
             <ul>
                 {% for archive in content.archives %}
@@ -12,6 +14,18 @@
                     </li>
                 {% endfor %}
             </ul>
+            {% endif %}
+
+            {% if content.organizations %}
+                <h3 class="title is-4">Organizations</h3>
+                <ul>
+                    {% for organization in content.organizations %}
+                    <li>
+                        <a href="{{ organization.url }}">{{ organization.name }}</a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
