Fix W3C Validation errors

--- a/diamm/templates/website/blocks/front_hero.jinja2
+++ b/diamm/templates/website/blocks/front_hero.jinja2
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="columns">
                 <div class="column is-one-third">
-                    <img src="{{ static('images/headerLogo.png') }}" style="filter: drop-shadow(1px 1px 1px #000);"/>
+                    <img src="{{ static('images/headerLogo.png') }}" style="filter: drop-shadow(1px 1px 1px #000);" alt="DIAMM Logo"/>
                 </div>
                 <div class="column">
                     <div class="front-search-box">
