--- a/diamm/templates/base.jinja2
+++ b/diamm/templates/base.jinja2
@@ -27,7 +27,7 @@
     <footer class="footer">
         <div class="container columns">
             <div class="column is-two-thirds footer-address">
-                <img src="{{ static('images/headerLogo.png') }}" />
+                <img src="{{ static('images/headerLogo.png') }}" alt="DIAMM Logo" />
                 <h5 class="title is-5">The Digital Image Archive of Medieval Music</h5>
                 <p>Faculty of Music,<br />
                     St. Aldates,<br />
