--- a/diamm/templates/website/blocks/header.jinja2
+++ b/diamm/templates/website/blocks/header.jinja2
@@ -1,8 +1,8 @@
 <header class="site-header">
-    <nav role="navigation" class="nav">
+    <nav class="nav">
         <div class="nav-left">
             <a href="/" class="nav-item is-brand">
-                <img src="{{ static('images/headerLogo.png') }}" />
+                <img src="{{ static('images/headerLogo.png') }}" alt="DIAMM Logo" />
             </a>
             <div class="dropdown-menu-parent">
                 <a href="/about" class="nav-item">About DIAMM</a>
