New: Add admin link in dropdown menu
For superusers, a link to the admin interface now appears in the dropdown menu.

Fixes #167

--- a/diamm/templates/website/blocks/header.jinja2
+++ b/diamm/templates/website/blocks/header.jinja2
@@ -29,6 +29,11 @@
                             <div>
                                 <a href="{{ url('logout') }}">Log out</a>
                             </div>
+                            {% if request.user.is_superuser %}
+                            <div>
+                                <a href="/admin">Admin Interface</a>
+                            </div>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
