Fixed: text for authentication pages
This commit cleans up some of the text for the various authentication page.

--- a/diamm/templates/website/auth/login.jinja2
+++ b/diamm/templates/website/auth/login.jinja2
@@ -27,13 +27,13 @@
 
                 <p>
                     Are you a user of the old DIAMM site?
-                    <a href="{{ url('reset') }}">You need to reset your password.</a>
+                    <a href="{{ url('reset') }}">You must reset your password.</a>
                 </p>
                 <p>
                     <a href="{{ url('reset') }}">Recover a forgotten password.</a>
                 </p>
                 <p>
-                    <a href="{{ url('register') }}">Register for a free account</a>
+                    <a href="{{ url('register') }}">Register for a free account.</a>
                 </p>
             </div>
         </div>
