Fixed: Better 'not found' page for sources
Also improved error handling for other errors.

Fixes #178
Fixes #179

--- a/diamm/templates/404.jinja2
+++ b/diamm/templates/404.jinja2
@@ -1,5 +1,13 @@
 {% extends "base.jinja2" %}
 
 {% block body %}
-    NOT FOUND.
+    <div class="columns">
+        <div class="column">
+            <h2 class="title is-2">Not Found</h2>
+            <p>
+                The page you were looking for does not exist. You can try <a href="/search">searching</a> for
+                the item instead.
+            </p>
+        </div>
+    </div>
 {% endblock %}
