--- a/diamm/templates/500.jinja2
+++ b/diamm/templates/500.jinja2
@@ -3,9 +3,9 @@
 {% block body %}
     <div class="columns">
         <div class="column">
-            <h2 class="title is-2">Bad Request</h2>
+            <h2 class="title is-2">Server Error</h2>
             <p>
-                The server received a malformed request (Error code 400).
+                An internal server error has occurred.
             </p>
         </div>
     </div>
