--- a/diamm/templates/403.jinja2
+++ b/diamm/templates/403.jinja2
@@ -1,5 +1,12 @@
 {% extends "base.jinja2" %}
 
 {% block body %}
-    DENIED.
+    <div class="columns">
+        <div class="column">
+            <h2 class="title is-2">Access Denied</h2>
+            <p>
+                You do not have permissions to view this resource.
+            </p>
+        </div>
+    </div>
 {% endblock %}
